-added scripts and plugins requires for automated bintray uploading
-renamed packages, folders and some strings to reflect that this is 2nd iteration of swipe deck.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.daprlabs.aaron.swipedeck3">
+    package="com.daprlabs.aaron.swipedeck2">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.daprlabs.aaron.swipedeck2.MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
